--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -8,4 +8,4 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v3
       - name: check default env
-        uses: env
+        run: env
