--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build-in-env111:
     runs-on: ubuntu-22.04
+    steps:
       - name: checkout code
         uses: actions/checkout@v3
       - name: check default env
