--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -3,10 +3,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-in-env111:
+  build-in-env:
     runs-on: ubuntu-22.04
     steps:
       - name: checkout code
         uses: actions/checkout@v3
       - name: check default env
         run: env
+      - name: print env
+        run: echo &GITHUB_REPOSITORY
