--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,4 +11,6 @@ jobs:
       - name: check default env
         run: env
       - name: print env
-        run: echo &GITHUB_REPOSITORY
+        run: echo $GITHUB_REPOSITORY
+      - name: test with python
+        run: python env.py
