--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,6 +1,8 @@
 name: workflow_env
 on:
   workflow_dispatch:
+env:
+  DAY_OF_WEEK: Monday
 
 jobs:
   build-in-env:
@@ -14,3 +16,14 @@ jobs:
         run: echo $GITHUB_REPOSITORY
       - name: test with python
         run: python env.py
+      - name: test env
+        run: echo "$Greeting $First_name. Today is $DAY_OF_WEEK!"
+  greetins_job:
+    runs-on: ubuntu-22.04
+    env:
+      Greeting: Hello
+    steps:
+      - name: "Say Hello Mona it's Monday"
+        run: echo "$Greeting $First_name. Today is $DAY_OF_WEEK!"
+        env:
+          First_name: Mona
