--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -2,8 +2,8 @@ name: workflow_secrets
 on:
   workflow_dispatch:
 env:
-  DB_U: test
-  DB_P: password
+  DB_U: ${{ secrets.DB_U }}
+  DB_P: ${{ secrets.DB_P }}
 
 jobs:
   test-secrets:
