--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -2,7 +2,7 @@ name: workflow_secrets
 on:
   workflow_dispatch:
 env:
-  DB_U: ${{ secrets.DB_U }}
+  DB_U: ${{ vars.DB_U }}
   DB_P: ${{ secrets.DB_P }}
 
 jobs:
