--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -7,6 +7,25 @@ env:
 
 jobs:
   test-secrets:
+    environment: test
+    env:
+      DB_U: ${{ vars.DB_USERNAME }}
+      DB_P: ${{ secrets.DB_PASSWORD }}
+    runs-on: ubuntu-22.04
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+      - name: checkout env u
+        run: echo "u=${{ env.DB_U}}"
+      - name: checkout env p
+        run: echo "p=${{ env.DB_P}}"
+      - name: test with python
+        run: python secrets.py
+  prod-secrets:
+    environment: prod
+    env:
+      DB_U: ${{ vars.DB_USERNAME }}
+      DB_P: ${{ secrets.DB_PASSWORD }}
     runs-on: ubuntu-22.04
     steps:
       - name: checkout code
